--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio-projects",
   "version": "1.0.0",
-  "main": "alertsBot.js",
+  "main": "leadsBot.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "leadsBot": "npx ts-node leadsBot.ts"
